Only set prompt if FancyPrompt plugin is loaded

--- a/re.pl/repl.rc
+++ b/re.pl/repl.rc
@@ -34,6 +34,6 @@ $_REPL->fancy_prompt( sub {
 		$prompt .= col( '> ', 'blue' );
 
 		$prompt;
-	});
+	}) if $_REPL->can('fancy_prompt');
 
 package main;
