--- a/ssh/config
+++ b/ssh/config
@@ -8,24 +8,24 @@ LocalForward 9102 0:9102
 LocalForward 9103 0:9103
 LocalForward 9104 0:9104
 
-Host corvisa.com. *.corvisa.com.
+Host corvisa.com *.corvisa.com
 ForwardAgent yes
 ForwardX11 yes
 User aschrab
 
-Host *.qqx.org. *.qqx.org
+Host *.qqx.org
 ForwardAgent yes
 ForwardX11 yes
 ControlMaster auto
 
-Host mlug.milwaukeelug.org. mlug.milwaukeelug.org
+Host mlug.milwaukeelug.org
 ForwardAgent yes
 ForwardX11 yes
 
-Host iphone.qqx.org. iphone.qqx.org
+Host iphone.qqx.org
 User root
 
-Host *.trilug.org. *.trilug.org
+Host *.trilug.org
 User aschrab
 
 # vim: ft=sshconfig
