--- a/ssh/config
+++ b/ssh/config
@@ -17,7 +17,7 @@ Host mgmt.ord.corvisa.com
 ProxyCommand none
 
 Host *.ord.corvisa.com
-ProxyCommand ssh mgmt.ord.corvisa.com nc %h %p
+ProxyCommand ssh -q -W %h:%p mgmt.ord.corvisa.com
 
 Host app1.ord.corvisa.com
 HostName 10.25.7.30
