ssh: Use port 222 for milamber

--- a/ssh/config
+++ b/ssh/config
@@ -35,6 +35,9 @@ ForwardAgent yes
 ForwardX11 yes
 ControlMaster auto
 
+Host milamber*
+Port 222
+
 Host mlug.milwaukeelug.org
 ForwardAgent yes
 ForwardX11 yes
