vim: Add syntax support for coffescript

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/bundle/command-t"]
 	path = vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
+[submodule "vim/bundle/syntax-coffeescript"]
+	path = vim/bundle/syntax-coffeescript
+	url = https://github.com/kchmck/vim-coffee-script.git
