ssh: Use port 222 for pug
Switched over to hostvirtual, not listening on port 22 to cut down on
hack attempt noise.

--- a/ssh/config
+++ b/ssh/config
@@ -2,8 +2,13 @@ HashKnownHosts no
 #ControlMaster auto
 ControlPath ~/.ssh/.master.%l-%r@%h:%p
 
+Host pug.qqx.org
+Port 222
+
 Host ircproxy
 HostName pug.qqx.org
+HostKeyAlias pug.qqx.org
+Port 222
 LocalForward 9100 0:9100
 LocalForward 9101 0:9101
 LocalForward 9102 0:9102
