--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,21 @@
 set -g prefix C-o
-unbind C-b
-bind C-o send-prefix
+bind o send-prefix
+bind C-o last-window
+bind Space next-window
+bind C-Space next-window
+bind D confirm-before -p "Power detach?" "detach -P"
 
 set -g status-bg white
 set -g status-fg black
 set -g status-left '#[fg=green]#H:#S'
 set-window-option -g window-status-current-bg red
 
-setw -g xterm-keys on
 set set-titles on
 set set-titles-string '#I.#P #T'
-set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
 
-bind Space next-window
+set-window-option -g xterm-keys on
+set-window-option -g mode-keys vi
+set-window-option -g mode-mouse off
+set-window-option -g automatic-rename off
+set-window-option -g aggressive-resize on
+set-window-option -g alternate-screen off
