ssh - Forward X and ssh agent for ircproxy

--- a/ssh/config
+++ b/ssh/config
@@ -9,6 +9,8 @@ Host ircproxy
 HostName pug.qqx.org
 HostKeyAlias pug.qqx.org
 Port 222
+ForwardX11 yes
+ForwardAgent yes
 LocalForward 9100 0:9100
 LocalForward 9101 0:9101
 LocalForward 9102 0:9102
