re.pl - Ensure a decent readline
The standard readline implementation is awful, and causes the fancy
prompt to be complete gibberish.

--- a/re.pl/repl.rc
+++ b/re.pl/repl.rc
@@ -7,6 +7,7 @@ foreach (qw{Timing DumpHistory OutputCache Interrupt Nopaste MultiLine::PPI Pack
 	$_REPL->load_plugin($_);
 }
 
+use Term::ReadLine::Gnu;
 use Term::ANSIColor;
 
 sub col {
