--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ set -g status-fg black
 set -g status-left '#[fg=green]#H:#S'
 set-window-option -g window-status-current-bg red
 
-set set-titles on
-set set-titles-string '#I.#P #T'
+set -g set-titles on
+set -g set-titles-string '#S.#I.#P #W'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
