--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,7 @@ set-window-option -g window-status-current-bg red
 
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #W'
+set -ga terminal-overrides ',gnome*:tsl=\E]2;:fsl=\007'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
