tmux - Simplify xtitle declaration for gnome term
Modify terminal overrides that state that gnome-terminal supports
setting the window title to just declare the XT boolean rather than
giving the control codes used to begin and end the title setting.

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set-window-option -g window-status-current-bg red
 
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #W'
-set -ga terminal-overrides ',gnome*:tsl=\E]2;:fsl=\007'
+set -ga terminal-overrides ',gnome*:XT'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
