--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/briangershon/vim-markdown.git
 [submodule "vim/bundle/css-color"]
 	path = vim/bundle/css-color
-	url = https://github.com/skammer/vim-css-color.git
+	url = git://github.com/skammer/vim-css-color.git
 [submodule "vim/bundle/vcscommand"]
 	path = vim/bundle/vcscommand
 	url = git://repo.or.cz/vcscommand
