--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,7 @@ set-window-option -g mode-mouse off
 set-window-option -g automatic-rename off
 set-window-option -g aggressive-resize on
 set-window-option -g alternate-screen off
+
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
