tmux - Use window title not name in title bar
The title is what mutt changes with the xterm title patch.

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g status-left '#[fg=green]#H:#S'
 set-window-option -g window-status-current-bg red
 
 set -g set-titles on
-set -g set-titles-string '#S.#I.#P #W'
+set -g set-titles-string '#S.#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
 
 set-window-option -g xterm-keys on
