--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,6 @@ set-window-option -g automatic-rename off
 set-window-option -g aggressive-resize on
 set-window-option -g alternate-screen off
 
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse-select-window off
+set -g mouse-select-pane   off
+set -g mouse-resize-pane   off
