--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/pathogen"]
 	path = vim/bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/bundle/lighttpd"]
+	path = vim/bundle/lighttpd
+	url = https://github.com/vim-scripts/lighttpd-syntax.git
