re.pl - Just warn if a plugin couldn't be loaded
Wrap loading of plugins for re.pl inside an eval {}, so that processing
of the config file continues if one of those fails.  But, warn that
there was a problem.

--- a/re.pl/repl.rc
+++ b/re.pl/repl.rc
@@ -4,7 +4,7 @@
 $ENV{NOPASTE_SERVICES} = 'Gist';
 
 foreach (qw{Timing DumpHistory OutputCache Interrupt Nopaste MultiLine::PPI Packages FancyPrompt}) {
-	$_REPL->load_plugin($_);
+	eval { $_REPL->load_plugin($_); 1 } or warn "Failed to load plugin $_\n";
 }
 
 use Term::ReadLine::Gnu;
