vim - Add ultisnips bundle
Seems to be a nicer implementation of snippets than snipmate.  Allows
making changes to placeholders in normal (non-insert) mode, which will
be reflected in places which mirror that placeholder.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/lighttpd"]
 	path = vim/bundle/lighttpd
 	url = https://github.com/aschrab/lighttpd-syntax.git
+[submodule "vim/bundle/ultisnips"]
+	path = vim/bundle/ultisnips
+	url = http://git.qqx.org/ultisnips
