tmux - Put status on top

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ bind D confirm-before -p "Power detach?" "detach -P"
 set -g status-bg white
 set -g status-fg black
 set -g status-left '#[fg=green]#H:#S'
+set -g status-position top
 set-window-option -g window-status-current-bg red
 
 set -g set-titles on
