tmux - Change bg of status bar to blue

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ bind Space next-window
 bind C-Space next-window
 bind D confirm-before -p "Power detach?" "detach -P"
 
-set -g status-bg white
+set -g status-bg blue
 set -g status-fg black
 set -g status-left '#[fg=green]#H:#S'
 set -g status-position top
