ssh - config for kahlan
This is OS X, don't try X forwarding since I don't run X on there.  Also
use standard ssh port, since Apple makes it very difficult to change
that.

--- a/ssh/config
+++ b/ssh/config
@@ -28,6 +28,10 @@ Host gay-deceiver.qqx.org
 Host zim.qqx.org
 #ProxyCommand ssh gay-deceiver.qqx.org nc %h %p
 
+Host kahlan*
+ForwardX11 no
+Port 22
+
 Host *.qqx.org
 ForwardAgent yes
 ForwardX11 yes
