ssh - Additional port for irc proxy.

--- a/ssh/config
+++ b/ssh/config
@@ -17,6 +17,7 @@ LocalForward 9101 0:9101
 LocalForward 9102 0:9102
 LocalForward 9103 0:9103
 LocalForward 9104 0:9104
+LocalForward 9105 0:9105
 
 Host aevo.qqx.org
 User root
