tmux - Improve colors for status

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,9 +5,9 @@ bind Space next-window
 bind C-Space next-window
 bind D confirm-before -p "Power detach?" "detach -P"
 
-set -g status-bg blue
-set -g status-fg black
-set -g status-left '#[fg=green]#H:#S'
+set -g status-bg '#9999ff'
+set -g status-fg white
+set -g status-left '#[fg=yellow]#H:#S'
 set -g status-position top
 set-window-option -g window-status-current-bg red
 
