vim - Install cmdalias plugin
Provide a nicer way to alias vim commands than ugly cabbrev command that
I used for ack in 2012-09-28T00:24:06Z!aaron@schrab.com.

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 [submodule "vim/bundle/editorconfig"]
 	path = vim/bundle/editorconfig
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "vim/bundle/cmdalias"]
+	path = vim/bundle/cmdalias
+	url = https://github.com/vim-scripts/cmdalias.vim.git
