vim - Install bundle for JavaScript support
JavaScript support bundled with vim is nearly useless, and the versions
that I have locally are ancient.

--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "vim/bundle/cmdalias"]
 	path = vim/bundle/cmdalias
 	url = https://github.com/vim-scripts/cmdalias.vim.git
+[submodule "vim/bundle/js"]
+	path = vim/bundle/js
+	url = https://github.com/pangloss/vim-javascript.git
