--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "vim/bundle/js"]
 	path = vim/bundle/js
 	url = https://github.com/pangloss/vim-javascript.git
+[submodule "vim/bundle/ruby"]
+	path = vim/bundle/ruby
+	url = https://github.com/aschrab/vim-ruby.git
