--- a/tmux.conf
+++ b/tmux.conf
@@ -5,11 +5,13 @@ bind Space next-window
 bind C-Space next-window
 bind D confirm-before -p "Power detach?" "detach -P"
 
-set -g status-bg '#9999ff'
-set -g status-fg white
+set -g status-bg '#f6f0a7'
+set -g status-fg green
 set -g status-left '#[fg=yellow]#H:#S'
 set -g status-position top
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg default
+set-window-option -g window-status-current-attr none
 
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #T'
