tmux - back to using window name in xterm title
Switch back from window title to window name for inclusion in the title
set for xterm titles.  Now it seems that that's what mutt is updating,
in contradiction to a previous commit.

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ set-window-option -g window-status-current-fg default
 set-window-option -g window-status-current-attr none
 
 set -g set-titles on
-set -g set-titles-string '#S.#I.#P #T'
+set -g set-titles-string '#S.#I.#P #W'
 set -ga terminal-overrides ',gnome*:XT'
 
 set-window-option -g xterm-keys on
