--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,6 @@
 [submodule "vim/bundle/SyntaxAttr"]
 	path = vim/bundle/SyntaxAttr
 	url = https://github.com/aschrab/SyntaxAttr.vim.git
+[submodule "vim/bundle/surround"]
+	path = vim/bundle/surround
+	url = https://github.com/tpope/vim-surround.git
