--- a/.gitmodules
+++ b/.gitmodules
@@ -80,3 +80,6 @@
 [submodule "vim/bundle/SudoEdit"]
 	path = vim/bundle/SudoEdit
 	url = https://github.com/chrisbra/SudoEdit.vim.git
+[submodule "vim/bundle/CamelCaseMotion"]
+	path = vim/bundle/CamelCaseMotion
+	url = https://github.com/bkad/CamelCaseMotion.git
