--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,7 @@
 	url = https://github.com/aschrab/vim-speeddating.git
 [submodule "vim/bundle/gitv"]
 	path = vim/bundle/gitv
-	url = https://github.com/gregsexton/gitv.git
+	url = https://github.com/aschrab/gitv.git
 [submodule "vim/bundle/editorconfig"]
 	path = vim/bundle/editorconfig
 	url = https://github.com/editorconfig/editorconfig-vim.git
