--- a/.gitmodules
+++ b/.gitmodules
@@ -83,3 +83,6 @@
 [submodule "vim/bundle/CamelCaseMotion"]
 	path = vim/bundle/CamelCaseMotion
 	url = https://github.com/bkad/CamelCaseMotion.git
+[submodule "vim/bundle/simplefold"]
+	path = vim/bundle/simplefold
+	url = https://github.com/aschrab/vim-simplefold.git
