tmux - Disable repeat for select-pane bindings
Don't allow prefix+arrow bindings to be repeated without another use of
the prefix key.  I generally don't have more than two panes open, so
repeating is pointless and annoying, especially since I'll often want to
use an arrow key immediately after switching to the other pane.

With that done, it makes sense to increase the `repeat-time` setting so
that resizing panes can be done more sensibly.  Changing that from .5
seconds to 1 second allows me to actually take a bit of time to decide
if the current size is right before doing additional resizing.

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,3 +27,9 @@ set-window-option -g alternate-screen off
 set -g mouse-select-window off
 set -g mouse-select-pane   off
 set -g mouse-resize-pane   off
+
+set repeat-time 1000
+bind-key Up    select-pane -U
+bind-key Down  select-pane -D
+bind-key Left  select-pane -L
+bind-key Right select-pane -R
