tmux - bind | to create a horizontal split
Create a horizontal split in tmux with prefix+| key sequence.  Mnemonic
is that the panes are separated by characters that at least look like
"|".

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,3 +33,5 @@ bind-key Up    select-pane -U
 bind-key Down  select-pane -D
 bind-key Left  select-pane -L
 bind-key Right select-pane -R
+
+bind-key '|'   split-window -h
