tmux - Don't use status-right
The default setting for status-right isn't really useful, containing the
title of the currently active window (which will be highlighted in the
main status portion) and the date and time (which will be available
other places on my screen).  Remove that to make more room for window
information.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ bind D confirm-before -p "Power detach?" "detach -P"
 set -g status-bg '#f6f0a7'
 set -g status-fg green
 set -g status-left '#[fg=yellow]#H:#S'
+set -g status-right ''
 set -g status-position top
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-fg default
