tmux - Use color to highlight active window.
Switch to using blue for the default window title color in the status
bar, and use green for the active window.

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,12 @@ bind C-Space next-window
 bind D confirm-before -p "Power detach?" "detach -P"
 
 set -g status-bg '#f6f0a7'
-set -g status-fg green
+set -g status-fg blue
 set -g status-left '#[fg=yellow]#H:#S'
 set -g status-right ''
 set -g status-position top
 set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg default
+set-window-option -g window-status-current-fg green
 set-window-option -g window-status-current-attr none
 
 set -g set-titles on
