tmux - Bind h,j,k,l to select pane
Allow using vi motion keys after tmux prefix to select a pane.  Easier
to reach than the arrows.

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,5 +34,9 @@ bind-key Up    select-pane -U
 bind-key Down  select-pane -D
 bind-key Left  select-pane -L
 bind-key Right select-pane -R
+bind-key k     select-pane -U
+bind-key j     select-pane -D
+bind-key h     select-pane -L
+bind-key l     select-pane -R
 
 bind-key '|'   split-window -h
