--- a/.gitmodules
+++ b/.gitmodules
@@ -88,4 +88,4 @@
 	url = https://github.com/aschrab/vim-simplefold.git
 [submodule "vim/bundle/screenshell"]
 	path = vim/bundle/screenshell
-	url = https://github.com/ervandew/screen.git
+	url = https://github.com/aschrab/screen.git
