--- a/.gitmodules
+++ b/.gitmodules
@@ -92,3 +92,6 @@
 [submodule "upstreams/syntax-hightlight"]
 	path = upstreams/syntax-hightlight
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "vim/bundle/numbertoggle"]
+	path = vim/bundle/numbertoggle
+	url = https://github.com/Greduan/vim-numbertoggle.git
