ssh - Enable keep-alive messages
Prevent NAT devices from losing track of ongoing but inactive
connections by configuring ssh to send keep-alive messages every 10
minutes.

--- a/ssh/config
+++ b/ssh/config
@@ -2,6 +2,7 @@ HashKnownHosts no
 #ControlMaster auto
 ControlPath ~/.ssh/.master.%l-%r@%h:%p
 VerifyHostKeyDNS=ask
+ServerAliveInterval=600
 
 Host milamber.qqx.org
 
