--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,9 @@
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim/bundle/textobj-user"]
+	path = vim/bundle/textobj-user
+	url = https://github.com/kana/vim-textobj-user.git
+[submodule "vim/bundle/textobj-ruby"]
+	path = vim/bundle/textobj-ruby
+	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
