TeX - Allow wider recipient address on envelopes
Adjust the width which envlab allows for recipient addresses.  The
default value was causing street addresses to be wrapped when writing to
representatives in DC.

--- a/texmf-config/tex/envlab.cfg
+++ b/texmf-config/tex/envlab.cfg
@@ -41,6 +41,8 @@
 \ExecuteOptions{nopswait,printreturnaddress,nopsautotray,nore}
 %%
 \AtEndOfPackage{\relax % Customization goes here
+  \setlength{\ToAddressLeftMargin}{1.5in}%
+  \setlength{\ToAddressWidth}{4.5in}%
 }
 \endinput
 %%
