GPG - Set preferred digest algorithms
Tell GPG what digest algorithms I prefer to use, since it still defaults
to using SHA1 even though that has some known weaknesses.

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -8,3 +8,5 @@ hidden-encrypt-to 0x6DB5C725
 default-key 0x6DB5C725
 
 verify-options show-primary-uid-only
+
+personal-digest-preferences SHA512 SHA384 SHA256 SHA224
