--- a/.gitmodules
+++ b/.gitmodules
@@ -104,3 +104,6 @@
 [submodule "vim/bundle/textobj-ruby"]
 	path = vim/bundle/textobj-ruby
 	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
+[submodule "upstreams/powerline"]
+	path = upstreams/powerline
+	url = git://github.com/Lokaltog/powerline
