--- a/tmux.conf
+++ b/tmux.conf
@@ -5,14 +5,13 @@ bind Space next-window
 bind C-Space next-window
 bind D confirm-before -p "Power detach?" "detach -P"
 
-set -g status-bg '#f6f0a7'
-set -g status-fg blue
-set -g status-left '#[fg=yellow]#H:#S'
+set -g status-fg colour231
+set -g status-bg colour234
+set -g status-left '#[fg=colour16,bg=colour254,bold] #H.#S #[fg=colour254,bg=colour234,nobold] '
 set -g status-right ''
+set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[fg=colour249]#W "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 set -g status-position top
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-attr none
 
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #T'
