--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ bind D confirm-before -p "Power detach?" "detach -P"
 
 set -g status-fg colour231
 set -g status-bg colour234
+set -g status-left-length 15
 set -g status-left '#[fg=colour16,bg=colour254,bold] #H.#S #[fg=colour254,bg=colour234,nobold] '
 set -g status-right ''
 set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[fg=colour249]#W "
