--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ set -g status-bg colour234
 set -g status-left-length 15
 set -g status-left '#[fg=colour16,bg=colour254,bold] #H.#S #[fg=colour254,bg=colour234,nobold] '
 set -g status-right ''
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[fg=colour249]#W "
-set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+set -g window-status-format "#[fg=colour244,bg=colour234]#I#[fg=colour240]#[fg=colour249]#T "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I#[fg=colour231,bold]#T #[fg=colour31,bg=colour234,nobold]"
 set -g status-position top
 
 set -g set-titles on
