i3status - Fix battery display
Battery in my laptop shows up as BAT1 not BAT0, so display that.

--- a/config/i3status/config
+++ b/config/i3status/config
@@ -26,6 +26,7 @@ ethernet eth0 {
 
 battery 0 {
         format = "%status %percentage %remaining"
+        path = "/sys/class/power_supply/BAT1/uevent"
 }
 
 run_watch DHCP {
