i3status - Don't display VPN status

--- a/config/i3status/config
+++ b/config/i3status/config
@@ -7,7 +7,7 @@ order += "wireless wlan0"
 order += "ipv6"
 order += "disk /"
 order += "run_watch DHCP"
-order += "run_watch VPN"
+#order += "run_watch VPN"
 order += "ethernet eth0"
 order += "battery 0"
 order += "load"
