--- a/config/i3/config
+++ b/config/i3/config
@@ -20,6 +20,9 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
+# lock screen
+bindsym $mod+z exec xscreensaver-command -lock
+
 # kill focused window
 bindsym $mod+Shift+Q kill
 
