ssh - Update config for linode console
Linode modified the method used to connect to consoles to have a single
host per data center, modify .ssh/config to use that method.

--- a/ssh/config
+++ b/ssh/config
@@ -52,9 +52,8 @@ Port 222
 Host *.trilug.org
 User aschrab
 
-Host linode_console
-User linode214437
-HostName atlanta286.linode.com
-HostKeyAlias linode_console
+Host lish
+User qqx
+HostName lish-atlanta.linode.com
 
 # vim: ft=sshconfig
