--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,12 +1,19 @@
+utf8-strings
+
 auto-key-locate keyserver
 
 #keyserver hkp://subkeys.pgp.net
-keyserver hkp://keys.gnupg.net
+keyserver hkps://keys.stueve.us
 keyserver-options auto-key-retrieve timeout=3
+keyserver-options no-honor-keyserver-url
+keyserver-options ca-cert-file=/etc/ssl/certs/ca-certificates.crt
 
 hidden-encrypt-to 0x6DB5C725
 default-key 0x6DB5C725
 
 verify-options show-primary-uid-only
 
+default-preference-list AES AES192 AES256 TWOFISH SHA1 SHA224 SHA256 SHA384 SHA512 Uncompressed ZIP ZLIB BZIP2
+personal-cipher-preferences AES256 TWOFISH AES192 AES
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
+personal-compress-preferences BZIP2 ZLIB ZIP
