--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,7 @@ set -g status-position top
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
+set -g default-shell /bin/zsh
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
