ssh - share qqx.org config with proxy
Modify settings for *.qqx.org and "proxy" so that settings from the
former will be used with the latter as well by default.  This eliminates
the need to separately specify the port to use for the ssh server,
especially nice when I take my laptop somewhere with restricted wifi and
I need to use port 443 to connect to pug.

--- a/ssh/config
+++ b/ssh/config
@@ -6,15 +6,12 @@ ServerAliveInterval=600
 
 Host milamber.qqx.org
 
-Host pug.qqx.org
+Host pug.qqx.org, proxy
 #Port 443
 
 Host proxy
 HostName pug.qqx.org
 HostKeyAlias pug.qqx.org
-Port 222
-ForwardX11 yes
-ForwardAgent yes
 DynamicForward 9876
 
 Host aevo.qqx.org
@@ -31,7 +28,7 @@ Host kahlan*
 ForwardX11 no
 Port 22
 
-Host *.qqx.org
+Host *.qqx.org, proxy
 ForwardAgent yes
 ForwardX11 yes
 Port 222
