tmux - Fix setting repeat time

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set -g mouse-select-window off
 set -g mouse-select-pane   off
 set -g mouse-resize-pane   off
 
-set repeat-time 1000
+set -g repeat-time 1000
 bind-key Up    select-pane -U
 bind-key Down  select-pane -D
 bind-key Left  select-pane -L
