vim - Use airline instead of powerline
Switch to using airline to generate a nice vim statusline rather than
powerline.  Powerline is rather heavy, requires that too much effort is
spent on styling, and tends to generate tons of errors if styling is
forgotten.

--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,6 @@
 [submodule "vim/bundle/puppet"]
 	path = vim/bundle/puppet
 	url = git://github.com/rodjek/vim-puppet.git
+[submodule "vim/bundle/airline"]
+	path = vim/bundle/airline
+	url = https://github.com/bling/vim-airline.git
