ssh - Turn off DNS host key verification
Until I'm using a version of ssh that supports getting fingerprints for
ECDSA keys from DNS, using DNS host key verification is annoying and
somewhat like crying wolf.

--- a/ssh/config
+++ b/ssh/config
@@ -1,7 +1,7 @@
 HashKnownHosts no
 #ControlMaster auto
 ControlPath ~/.ssh/.master.%l-%r@%h:%p
-VerifyHostKeyDNS=ask
+#VerifyHostKeyDNS=ask
 ServerAliveInterval=600
 
 Host milamber.qqx.org
