vim - Add puppet plugin
Add syntax and indent support for puppet files.

--- a/.gitmodules
+++ b/.gitmodules
@@ -113,3 +113,6 @@
 [submodule "vim/bundle/signify"]
 	path = vim/bundle/signify
 	url = https://github.com/mhinz/vim-signify.git
+[submodule "vim/bundle/puppet"]
+	path = vim/bundle/puppet
+	url = git://github.com/rodjek/vim-puppet.git
