tmux - Reattach to user namespace on OS X

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,4 @@ bind-key h     select-pane -L
 bind-key l     select-pane -R
 
 bind-key '|'   split-window -h
+if '[ -f /mach_kernel ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
