--- a/.gitmodules
+++ b/.gitmodules
@@ -140,3 +140,6 @@
 [submodule "vim/bundle/you_complete_me"]
 	path = vim/bundle/you_complete_me
 	url = https://github.com/Valloric/YouCompleteMe
+[submodule "vim/bundle/swapit"]
+	path = vim/bundle/swapit
+	url = https://github.com/mjbrownie/swapit
