tmux - Create default session when server starts
Have server automatically create a default session when it starts so
that I can use "ssh -t some.host tmux attach" without needing to worry
about the case where no session is running on the destination.

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,3 +42,5 @@ bind-key l     select-pane -R
 
 bind-key '|'   split-window -h
 if '[ -f /mach_kernel ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+
+new-session -s default
