tmux - Make zsh default shell if it exists

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour11
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
-#set -g default-shell /bin/zsh
+if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
 set-window-option -g xterm-keys on
 set-window-option -g mode-keys vi
