--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g status-left '#[fg=colour16,bg=colour254,bold] #S@#h #[fg=colour254,bg=col
 set -g status-right ''
 set -g window-status-format "#[fg=colour244,bg=colour234]#I#[fg=colour240]#[fg=colour249]#T "
 set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I#[fg=colour231,bold]#T #[fg=colour31,bg=colour234,nobold]"
-#set -g status-position top
+if 'tmux set -g status-position top' 'source /dev/null'
 
 set -g set-titles on
 set -g set-titles-string '#S.#I.#P #T'
