--- a/.gitmodules
+++ b/.gitmodules
@@ -149,3 +149,6 @@
 [submodule "vim/bundle/exchange"]
 	path = vim/bundle/exchange
 	url = https://github.com/tommcdo/vim-exchange.git
+[submodule "vim/bundle/delimitMate"]
+	path = vim/bundle/delimitMate
+	url = https://github.com/Raimondi/delimitMate
