--- a/.gitmodules
+++ b/.gitmodules
@@ -152,3 +152,6 @@
 [submodule "vim/bundle/delimitMate"]
 	path = vim/bundle/delimitMate
 	url = https://github.com/Raimondi/delimitMate
+[submodule "vim/bundle/textobj-comment"]
+	path = vim/bundle/textobj-comment
+	url = https://github.com/glts/vim-textobj-comment
