vim,tmux - Use common bindings for navigating splits
Add tmux-navigator plugin to vim, and configure tmux for that.  This
will allow C-H, C-J, C-K, and C-L keys to navigate between splits
without me needing to determine if the split is due to tmux or vim.

--- a/.gitmodules
+++ b/.gitmodules
@@ -161,3 +161,6 @@
 [submodule "vim/bundle/dbext"]
 	path = vim/bundle/dbext
 	url = https://github.com/vim-scripts/dbext.vim
+[submodule "vim/bundle/tmux-navigator"]
+	path = vim/bundle/tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
