--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,15 @@ bind-key j     select-pane -D
 bind-key h     select-pane -L
 bind-key l     select-pane -R
 
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+bind C-l send-keys 'C-l'
+
 bind-key '|'   split-window -h
 if '[ -f /mach_kernel ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
