tmux - Don't create default session
Creating a default session in the config file makes it annoying to
source the config to make changes to the running server, and it isn't
always serving the desired purpose either; so disable that at least for
now.

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,4 +52,4 @@ bind C-l send-keys 'C-l'
 bind-key '|'   split-window -h
 if '[ -f /mach_kernel ]' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
-new-session -s dflt
+#new-session -s dflt
