--- a/tmux.conf
+++ b/tmux.conf
@@ -41,11 +41,11 @@ bind-key h     select-pane -L
 bind-key l     select-pane -R
 
 # Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h if "echo '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$'" 'send-keys C-h' 'select-pane -L'
+bind -n C-j if "echo '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$'" 'send-keys C-j' 'select-pane -D'
+bind -n C-k if "echo '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$'" 'send-keys C-k' 'select-pane -U'
+bind -n C-l if "echo '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$'" 'send-keys C-l' 'select-pane -R'
+bind -n C-\ if "echo '#{pane_current_command}' | grep -iqE '(^|\/)vi(|mx?|ew|mdiff)$'" 'send-keys C-\' 'select-pane -l'
 
 bind C-l send-keys 'C-l'
 
