--- a/.gitmodules
+++ b/.gitmodules
@@ -167,3 +167,6 @@
 [submodule "vim/bundle/endwise"]
 	path = vim/bundle/endwise
 	url = https://github.com/tpope/vim-endwise
+[submodule "vim/bundle/genutils"]
+	path = vim/bundle/genutils
+	url = https://github.com/vim-scripts/genutils
