ssh - Set long value for ForwardX11Timeout
Set ForwardX11Timeout to 3 weeks, X11 on OS X will crash if a longer
value is used.  Default is 20 minutes which is WAY too short.

--- a/ssh/config
+++ b/ssh/config
@@ -32,6 +32,7 @@ Host *.qqx.org proxy
 User ats
 ForwardAgent yes
 ForwardX11 yes
+ForwardX11Timeout 3w
 Port 222
 
 Host *.trilug.org
@@ -46,6 +47,7 @@ Host *.netapp.com
 User aschrab
 ForwardAgent yes
 ForwardX11 yes
+ForwardX11Timeout 3w
 
 Host p4git
 BatchMode yes
