--- a/.gitmodules
+++ b/.gitmodules
@@ -170,3 +170,6 @@
 [submodule "vim/bundle/genutils"]
 	path = vim/bundle/genutils
 	url = https://github.com/vim-scripts/genutils
+[submodule "vim/bundle/json"]
+	path = vim/bundle/json
+	url = https://github.com/elzr/vim-json
