tmux - Use tmux separators in xterm title string
Modify set-titles-string to use same separators as tmux uses for
arguments to commands like join-pane.

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour11
 if 'tmux set -g status-position top' 'source /dev/null'
 
 set -g set-titles on
-set -g set-titles-string '#S.#I.#P #T'
+set -g set-titles-string '#S:#I.#P #T'
 set -ga terminal-overrides ',gnome*:XT'
 if '[ -x /bin/zsh ]' 'set -g default-shell /bin/zsh'
 
