--- a/config/touchegg/touchegg.conf
+++ b/config/touchegg/touchegg.conf
@@ -20,24 +20,10 @@
         </gesture>
 
         <gesture type="DRAG" fingers="2" direction="ALL">
-            <action type="SCROLL">SPEED=7:INVERTED=false</action>
+            <action type="SCROLL">SPEED=7:INVERTED=true</action>
         </gesture>
 
-
-        <gesture type="DRAG" fingers="3" direction="UP">
-            <action type="MAXIMIZE_RESTORE_WINDOW"></action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="3" direction="DOWN">
-            <action type="MINIMIZE_WINDOW"></action>
-        </gesture>
-
-
-        <gesture type="DRAG" fingers="3" direction="LEFT">
-            <action type="MOVE_WINDOW"></action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="3" direction="RIGHT">
+        <gesture type="DRAG" fingers="3" direction="ALL">
             <action type="MOVE_WINDOW"></action>
         </gesture>
 
@@ -82,14 +68,30 @@
     </application>
 
 
-    <application name="Chromium-browser, Dolphin">
+    <application name="Chromium, Chromium-browser, Dolphin">
 
-        <gesture type="DRAG" fingers="2" direction="LEFT">
+        <gesture type="TAP" fingers="1" direction="">
+            <action type="MOUSE_CLICK">BUTTON=1</action>
+        </gesture>
+
+        <gesture type="TAP" fingers="2" direction="">
+            <action type="MOUSE_CLICK">BUTTON=2</action>
+        </gesture>
+
+        <gesture type="DRAG" fingers="3" direction="LEFT">
             <action type="SEND_KEYS">Alt+Left</action>
         </gesture>
 
-        <gesture type="DRAG" fingers="2" direction="RIGHT">
+        <gesture type="DRAG" fingers="3" direction="RIGHT">
             <action type="SEND_KEYS">Alt+Right</action>
+        </gesture>
+
+        <gesture type="DRAG" fingers="4" direction="RIGHT">
+            <action type="SEND_KEYS">Control+Tab</action>
+        </gesture>
+
+        <gesture type="DRAG" fingers="4" direction="RIGHT">
+            <action type="SEND_KEYS">Control+Shift+Tab</action>
         </gesture>
 
     </application>
