Tighten git ignore rules
Most of the entries in .gitignore file were meant to match complete
paths, add leading slash so that git will treat them as such.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 .*.sw[op]
 .DS_Store
 *.pyc
-vim/.netrwhist
-vim/doc/tags
-vim/local.vim
-vim/spell
-lftp/cwd_history
-lftp/rl_history
-lftp/transfer_log
-mutt/aliases
-mutt/secrets
-ssh/id*
-ssh/authorized_keys
-ssh/known_hosts
+/vim/.netrwhist
+/vim/doc/tags
+/vim/local.vim
+/vim/spell
+/lftp/cwd_history
+/lftp/rl_history
+/lftp/transfer_log
+/mutt/aliases
+/mutt/secrets
+/ssh/id*
+/ssh/authorized_keys
+/ssh/known_hosts
