--- a/.gitmodules
+++ b/.gitmodules
@@ -34,7 +34,7 @@
 	url = https://github.com/evanmiller/nginx-vim-syntax.git
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = https://github.com/aschrab/vim-fugitive.git
 [submodule "vim/bundle/unimpaired"]
 	path = vim/bundle/unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
